--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -75,10 +75,14 @@ footer {
         font-weight: 200;
         .social-links {
             padding-right: 0;
+            padding-left: 0;
         }
         .nav {
-            text-align: right;
             float: right;
+            @media (max-width: 992px) {
+                float: none;
+                display: inline-flex;
+            }
             li {
             font-size: 16px;
             display: inline;
@@ -90,5 +94,14 @@ footer {
                 }
             }
         }
+        @media (max-width: 992px) {
+            text-align: center;
+            .col-12 {
+                margin-top: 16px;
+            }
+        }
+    }
+    .footer-inputs {
+        margin-bottom: 26px;
     }
 }
